Disable "Save Record Changes" action when user cancels editing

General
*Cleanups in API of the data-aware view
*Disable "Save Record Changes" action when user cancels editing or reverts edited text to the original value.
 "Cancel Record Changes" action is not disabled though,  so user is still able to exit from record editing mode.
BUG:278417